k8-single-ingress-to-multiple-backend/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web-server-ingress-2
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-server-svc
            port:
              number: 8082
