k8-single-ingress-to-multiple-backend/node-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /node/
        pathType: Prefix
        backend:
          service:
            name: node-app-svc
            port:
              number: 3000
