k8-single-ingress-to-multiple-backend/web-servers2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-nginx-server
  name: my-nginx-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-nginx-server-pod
  template:
    metadata:
      labels:
        app: my-nginx-server-pod
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: green-node
                    operator: In
                    values:
                      - "yes"
      containers:
      - image: nginx:latest
        name: my-nginx-container
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            name: http-web-svc
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-server-svc
spec:
  type: NodePort
  ports:
  - port: 8082
    targetPort: 80
  selector:
    app: my-nginx-server-pod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginex-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-server-svc
            port:
              number: 8082
